fix copied text broken in diagnostic display

--- a/IDAES-UI/src/components/flowsheet_main_component/flowsheet_diagnostics_component/diagnostics_display/diagnostics_display.module.css
+++ b/IDAES-UI/src/components/flowsheet_main_component/flowsheet_diagnostics_component/diagnostics_display/diagnostics_display.module.css
@@ -110,8 +110,9 @@
 .copied_next_step::after{
     content:"Copied!";
     position: absolute;
+    color: black;
     top: 50%;
-    right: 0;
+    right: -180%;
     transform: translateY(-50%);
     width: 80px;
     height: 30px;
